tests/files/type_checker_tests/should_fail/190.cmdr
//Should fail if read expression does not have string
x = read 3;
